--- a/Vulkan.vcxproj
+++ b/Vulkan.vcxproj
@@ -268,6 +268,10 @@
     <Library Include="external\lib\VkLayer_utils.lib" />
     <Library Include="external\lib\vulkan-1.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
